<resources>
    <string name="app_name">GPS2FTP</string>
    <string name="action_settings">Settings
    </string>
    <string name="appwidget_text">no address available</string>
    <string name="host">Host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remoteDirectory">Remote Directory</string>
    <string name="googleMaps">Google Maps Api Key</string>

    <string name="save_widget">Save</string>
    <string name="publish_ftp">Publish found geodata now?</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="googleMapsApiKey">AIzaSyCl5RYonTX2Pg83Lvys7cjlcQTrQrgWRm4</string>
</resources>
